if(WITH_PYTHON)
	find_package(PythonLibs 3 REQUIRED)
	set(version ${PYTHONLIBS_VERSION_STRING})
	message(STATUS "version: ${version}")
	STRING( REGEX REPLACE "([0-9.]+).[0-9]+(rc[0-9]+)?" "\\1" version ${version} )
	message(STATUS "version: ${version}")
	STRING( REGEX REPLACE "[^0-9]" "" version ${version} )
	message(STATUS "version: ${version}")
	if(WIN32)
		find_package(Boost 1.45.0 COMPONENTS "python${version}" REQUIRED)
	elseif (Boost_VERSION LESS "106700")
		# the following will issue a warning
		# see: https://gitlab.kitware.com/cmake/cmake/issues/16335
		find_package(Boost 1.45.0 COMPONENTS "python-py${version}" REQUIRED)
	else()
		find_package(Boost 1.45.0 COMPONENTS "python3" REQUIRED)
	endif()
	add_subdirectory(python)
endif()
