add_executable(collision_model collision_model.cc)
if(WITH_CUDA)
  add_definitions(-DWITH_CUDA)
  if (MSVC)
    target_link_libraries(collision_model cudaslam scan_static ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
  else()
    target_link_libraries(collision_model cudaslam scan_shared ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
  endif()
else()
  if (MSVC)
    target_link_libraries(collision_model scan_static ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
  else()
    target_link_libraries(collision_model scan_shared ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
  endif()
endif()
add_executable(extract_hull extract_hull.cc)
if (MSVC)
  target_link_libraries(extract_hull scan_static ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
else()
  target_link_libraries(extract_hull scan_shared ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
endif()

add_executable(segment_colliding segment_colliding.cc)
if (MSVC)
  target_link_libraries(segment_colliding scan_static ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
else()
  target_link_libraries(segment_colliding scan_shared ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
endif()