add_executable(collision_model collision_model.cc)
if(WITH_CUDA)
  add_definitions(-DWITH_CUDA)
  target_link_libraries(collision_model cudaslam scan ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
else()
  target_link_libraries(collision_model scan ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
endif()
add_executable(extract_hull extract_hull.cc)
target_link_libraries(extract_hull scan ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})

add_executable(segment_colliding segment_colliding.cc)
target_link_libraries(segment_colliding scan ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
